# src/shared/infra/http/routes/index.ts
@@ -1,7 +1,7 @@
 import { Router } from "express";
 import { clientsRoutes } from "./clients.routes";
 import { authenticateRoutes } from "./authenticate.routes";
-import { deliverymansRoutes } from "./deliveryman.routes";
+import { deliverymansRoutes } from "./deliverymans.routes";
 import { deliveriesRoutes } from "./deliveries.routes";
 import { profilesRoutes } from "./profiles.routes";
 
@@ -9,7 +9,7 @@ const router = Router();
 
 router.use("/clients", clientsRoutes);
 router.use("/authenticate", authenticateRoutes);
-router.use("/deliveryman", deliverymansRoutes);
+router.use("/deliverymans", deliverymansRoutes);
 router.use("/deliveries", deliveriesRoutes);
 router.use("/profiles", profilesRoutes);
 
